# MultiplatformEngine

./: .gitignore  README.md
Android/: gradle.properties  settings.gradle
Android/app/: CMakeLists.txt  build.gradle
Android/app/src/androidTest/java/com/example/multiplatform/: ExampleInstrumentedTest.java
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: AndroidUtils.h  Main.cpp  OSEngine.cpp  OSEngine2.cpp  OSEngine2.h  android_main.cpp  jni_util.cpp
Android/app/src/main/java/com/example/multiplatform/: MainActivity.java  MultiplatformGameActivity.java  MultiplatformNativeActivity.java
Android/app/src/main/java/com/example/multiplatform/helper/: NDKHelper.java
Android/app/src/main/res/values/: strings.xml  themes.xml
Android/app/src/main/res/values-night/: themes.xml
Android/app/src/test/java/com/example/multiplatform/: ExampleUnitTest.java
Android/gradle/wrapper/: gradle-wrapper.properties
ProjectSelector/: ProjectSelector.h  ProjectSelector.py
ProjectSelector/Sample3D_Project/: SceneSample3D.cpp
ProjectSelector/sample_projects/Sample3D/: SceneSample3D.cpp
ProjectSelector/sample_projects/Sample3D_Project/: ProjectSelector.cpp
ProjectSelector/template_project/: SceneTemplate.cpp
ProjectWizard/: ProjectWizard.py  windows_CMakeLists.txt
ProjectWizard/sample_projects/Sample3D/: SceneSample3D.h
ProjectWizard/template/: ProjectSelector.cpp  SceneTemplate.h
Projects/Sample/: SceneLightMap.cpp  SceneLightMap.h
Shared/source/engine/: Engine.cpp  Engine.h
Shared/source/mesh/: Mesh.cpp  MeshBuilder.cpp
Shared/source/scenes/: ProjectSelector.h  SceneLightMap.cpp
Shared/source/thread/: ThreadPoolBase.h
Shared/source/top/: Includes.h  Utility.cpp
Web/: emcc.txt  gen_emcc_command.py
Web/min_example/: emcc.txt  glfw3_webgl2_ver.cpp
Windows/: .gitignore  CMakeLists.txt  Multiplatform.sln
Windows/Multiplatform/: Multiplatform.vcxproj  Multiplatform.vcxproj.filters
Windows/src/: OSEngine.h  main.cpp
